# LSCI

./: README.md  pyproject.toml  simulation_base_train.ipynb  simulation_metrics.ipynb  simulation_quant_train.ipynb  weather_quant_train.ipynb
.ipynb_checkpoints/: cesm_data-checkpoint.ipynb  simulation_base_train-checkpoint.ipynb  simulation_metrics-checkpoint.ipynb  simulation_quant_train-checkpoint.ipynb  weather_data-checkpoint.ipynb  weather_metrics-checkpoint.ipynb
climate/: cesm_base_train.ipynb  cesm_data.ipynb
energy/: Untitled.ipynb  energy.ipynb  energy_metrics.ipynb  energy_sims.ipynb  energy_sims2.ipynb
examples/: figure1.ipynb
fluids/: ForcedNavierStokes-Copy1.ipynb
gpsims/: gp1d.ipynb  gp1d_adaptive (figure 3).ipynb  gp1d_adaptivity.ipynb  gp1d_ar_table3.ipynb  gp1d_cover.npy  gp1d_dev.ipynb  gp1d_dev2.ipynb  gp1d_dev4.ipynb  gp1d_method.ipynb  gp1d_sens.ipynb  gp1d_sens_ex.ipynb  gp1d_sim.ipynb  gp1d_sim2.ipynb  gp1d_table1.ipynb  gp1d_table1_and_table2.ipynb  gp1d_table2.ipynb  gp1d_table2_test.ipynb  gp1d_table3-Copy1.ipynb  gp1d_table3-Copy2.ipynb  gp1d_table3.ipynb  gp1d_table3_test.ipynb  gp1d_width.npy  gp2d_dev.ipynb  gp2d_sim2.ipynb  gp2d_sim2_old.ipynb  gp2d_table3.ipynb  gp2d_table4.ipynb  reference.ipynb  simulation_quant_train.ipynb  table2.ipynb
methods/: conf.py  gaus.py  lsci.py  prob_don.py  quant_don.py  supr.py  uqno.py
misc/: InfoLeak-Copy1.ipynb  InfoLeak.ipynb  test-Copy1.ipynb  test.ipynb
models_and_metrics/: metrics.py  models.py  utility.py
project_scripts/: Untitled.ipynb  dev.ipynb  test.ipynb
(+69 files in other folders)
